--- a/cheat/cheatsheets/history
+++ b/cheat/cheatsheets/history
@@ -1,3 +1,42 @@
 # To see most used top 10 commands:
 history | awk '{CMD[$2]++;count++;}END { for (a in CMD)print CMD[a] " " CMD[a]/count*100 "% " a;}' | grep -v "./" | column -c3 -s " " -t | sort -nr | nl | head -n10
-
+# execute last command
+>!!
+# return last argument
+>!$
+# return first argument
+>!^
+# return all arguments
+>!*
+# return the string on nth position
+>!:n
+# return position n to x
+>!:n-x
+# return all arguments starting with n
+>!:n*
+# execute command with history number n
+>!n
+# exectue command that was run n commands back
+>!-n
+# execute first command (going up) that matches str
+>!?str
+# execute first command (going up) that contains str
+>!?str?
+# return path up to bas filename
+>!:h
+# return only base filename
+>!:t
+# return path up to extension
+>!:r
+# return only extension
+>!:e
+# substitute first occurence of str1 with str2
+>!:s/str1/str2
+# substitute all occurences of str1 with str2
+>!:gs/str1/str2
+# repeat last successful substitution
+>!:&
+# repeat last successful substitution and make it global
+>!:g&
+# don’t execute, print only
+>!:p
